# rust-wallet-android

./: .gitignore  Cargo.toml  README.md  build-lib.sh  build.gradle  build.sh  install-lib.sh  install.sh  settings.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/org/rustwallet/android/: MainActivity.java
app/src/test/java/org/rustwallet/android/: ExampleUnitTest.java
lib/: Cargo.toml  build.gradle
lib/src/: account.rs  lib.rs
lib/src/androidTest/java/org/rustwallet/android/: ExampleInstrumentedTest.java
lib/src/main/: AndroidManifest.xml
lib/src/main/java/org/rustwallet/android/: Account.java  AccountLib.java  AccountService.java  Entropy.java  MasterAccount.java  Network.java
lib/src/main/java/org/rustwallet/android/gson/: DateTypeAdapter.java  NetworkTypeAdapter.java
lib/src/main/jniLibs/x86_64/: librust_wallet_android.dylib
lib/src/main/res/layout/: activity_main.xml
lib/src/main/res/values/: strings.xml
lib/src/test/java/org/rustwallet/android/: AccountServiceTest.java  ExampleUnitTest.java
rust/: Cargo.toml
rust/src/: account.rs  lib.rs
rust/tests/: esplora_test.rs
src/: lib.rs
