[package]
name = "rust-wallet-android"
version = "0.1.0"
authors = ["Steve Myers <steve@bytabit.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.13.1", default-features = false }
bitcoin-wallet = { git = "https://github.com/rust-bitcoin/rust-wallet/", tag = "1.0.0" }

bitcoin = { version= "0.21.0", features=["serde"]}
bitcoin_hashes={version="0.7", features=["serde"]}
secp256k1 = "0.15"
rand="0.7"
rust-crypto = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_json="1.0"
futures = "0.1.23"

#tokio = { version = "0.1.7", default-features = false, features = ["rt-full", "tcp"] }
#reqwest = "0.9.22"

[dev-dependencies]
bitcoin = { version= "0.21.0", features=["serde", "bitcoinconsensus"]}
hex = "0.3"

[profile.release]
lto = true

[lib]
name = "rust_wallet_android"
crate-type = ["cdylib"]